# DataAcqustionApp

./: CMakeLists.txt  about.txt  architecureDescription.txt  vcpkg.json
app/: main.cpp
app/DataProcessor/: CMakeLists.txt
app/DataProcessor/inc/: DataProcessor.h
app/DataProcessor/src/: DataProcessor.cpp
app/DataQueue/: CMakeLists.txt
app/DataQueue/inc/: DataQueue.h
app/DataQueue/src/: DataQueue.cpp
app/DbStore/: CMakeLists.txt
app/DbStore/inc/: DbStore.h
app/DbStore/src/: DbStore.cpp
app/TcpServer/: CMakeLists.txt
app/TcpServer/inc/: TcpServer.h
app/TcpServer/src/: TcpServer.cpp
app/WebSocketClient/: CMakeLists.txt
app/WebSocketClient/inc/: WebSocketClient.h
app/WebSocketClient/src/: WebSocketClient.cpp
